--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ install:
   - go get golang.org/x/crypto/salsa20
   - go get github.com/codahale/chacha20
   - go get github.com/shadowsocks/shadowsocks-go/shadowsocks
+  - go get github.com/Sirupsen/logrus
+  - go get github.com/Terry-Mao/goconf
+  - go get github.com/go-sql-driver/mysql
+  - go get github.com/jinzhu/gorm
+  - go get gopkg.in/redis.v3
   - go install ./mu
 script:
   - PATH=$PATH:$HOME/gopath/bin bash -x ./script/test.sh
