config check time

--- a/mu/example.conf
+++ b/mu/example.conf
@@ -1,9 +1,15 @@
+[base]
+N 1
+checktime  60
+synctime   60
+
 [mysql]
 host  127.0.0.1:3306
 user user
 pass pass
 db   db
 table table
+
 [redis]
 host localhost:6379
 # if no passwd set,comment this line
