--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - go get github.com/go-sql-driver/mysql
   - go get github.com/jinzhu/gorm
   - go get gopkg.in/redis.v3
+  - go get github.com/cyfdecyf/leakybuf
   - go install ./mu
 script:
   - PATH=$PATH:$HOME/gopath/bin bash -x ./script/test.sh
