--- a/mu/example.conf
+++ b/mu/example.conf
@@ -5,6 +5,10 @@ client webapi
 checktime  60
 synctime   60
 
+[webapi]
+url http://sspanel.dev
+key key
+
 [mysql]
 host  127.0.0.1:3306
 user user
