--- a/mu/example.conf
+++ b/mu/example.conf
@@ -6,8 +6,9 @@ checktime  60
 synctime   60
 
 [webapi]
-url http://sspanel.dev
+url http://sspanel.dev/mu
 key key
+node_id 1
 
 [mysql]
 host  127.0.0.1:3306
