--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 go:
-  - 1.4.3
+  - 1.5.3
 install:
   - go get golang.org/x/crypto/blowfish
   - go get golang.org/x/crypto/cast5
@@ -13,6 +13,7 @@ install:
   - go get github.com/jinzhu/gorm
   - go get gopkg.in/redis.v3
   - go get github.com/cyfdecyf/leakybuf
+  - go get github.com/lib/pq
   - go install ./mu
 script:
   - PATH=$PATH:$HOME/gopath/bin bash -x ./script/test.sh
