--- a/mu/example.conf
+++ b/mu/example.conf
@@ -1,4 +1,4 @@
-## 配置说明  https://github.com/shadowsocks/shadowsocks-go/wiki/Config
+## 配置说明  https://shadowsocks/shadowsocks-go/wiki/Config
 [base]
 N 1
 ip 0.0.0.0
