--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,11 @@ addons:
     - libaspell-dev
     - libhunspell-dev
 
+before_install:
+ - go get -v -u github.com/chzchzchz/goword
+ - go get -v -u honnef.co/go/tools/cmd/gosimple
+ - go get -v -u honnef.co/go/tools/cmd/unused
+ - go get -v -u honnef.co/go/tools/cmd/staticcheck
+
 script:
   - cd cmd/shadowss/ && go build -a  -o shadowss
